--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ version: "3.7"
 services:
     app:
         build: .
-        container_name: rentx
+        container_name: rentalx
         ports: 
             - 3333:3333
         volumes:
-            - .:C:\Ignite\Images
+            - .:/user/app
