--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-        "dev": "./node_modules/.bin/ts-node-dev --poll --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts"
+        "dev": "./node_modules/.bin/ts-node-dev --poll --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts",
+        "typeorm": "ts-node-dev ./node_modules/typeorm/cli"
     },
     "repository": "https://github.com/Uallessonivo/rentalx.git",
     "author": "Uallesson Nunes Ivo <uallessons@gmail.com>",
@@ -12,7 +13,10 @@
         "csv-parse": "^4.16.3",
         "express": "^4.17.1",
         "multer": "^1.4.3",
+        "pg": "^8.7.1",
+        "reflect-metadata": "^0.1.13",
         "swagger-ui-express": "^4.1.6",
+        "typeorm": "^0.2.39",
         "uuid": "^8.3.2"
     },
     "devDependencies": {
