--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-        "dev": "./node_modules/.bin/ts-node-dev --poll --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts",
+        "dev": "ts-node-dev --inspect --respawn --poll --transpile-only --ignore-watch node_modules ./src/server.ts",
         "typeorm": "ts-node-dev ./node_modules/typeorm/cli"
     },
     "repository": "https://github.com/Uallessonivo/rentalx.git",
@@ -16,6 +16,7 @@
         "pg": "^8.7.1",
         "reflect-metadata": "^0.1.13",
         "swagger-ui-express": "^4.1.6",
+        "tsyringe": "^4.6.0",
         "typeorm": "^0.2.39",
         "uuid": "^8.3.2"
     },
