--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
-version: "3.9"
+version: "3.7"
 
 services:
-    database:
+    database_ignite:
         image: postgres
         container_name: database_ignite
         restart: always
@@ -13,19 +13,17 @@ services:
             - POSTGRES_DB=rentalx
         volumes:
             - pgdata:/data/postgres
-
     app:
         build: .
         container_name: rentalx
-        restart: always
         ports:
             - 3333:3333
         volumes:
             - .:/usr/app
         links:
-            - database
+            - database_ignite
         depends_on:
-            - database
+            - database_ignite
 
 volumes:
     pgdata:
