--- a/package.json
+++ b/package.json
@@ -1,46 +1,50 @@
 {
-    "name": "rentalx",
-    "version": "1.0.0",
-    "main": "index.js",
-    "scripts": {
-        "dev": "ts-node-dev --inspect --respawn --poll --transpile-only --ignore-watch node_modules ./src/server.ts",
-        "typeorm": "ts-node-dev ./node_modules/typeorm/cli"
-    },
-    "repository": "https://github.com/Uallessonivo/rentalx.git",
-    "author": "Uallesson Nunes Ivo <uallessons@gmail.com>",
-    "license": "MIT",
-    "dependencies": {
-        "bcryptjs": "^2.4.3",
-        "csv-parse": "^4.16.3",
-        "express": "^4.17.1",
-        "express-async-errors": "^3.1.1",
-        "jsonwebtoken": "^8.5.1",
-        "multer": "^1.4.3",
-        "pg": "^8.7.1",
-        "reflect-metadata": "^0.1.13",
-        "swagger-ui-express": "^4.1.6",
-        "tsyringe": "^4.6.0",
-        "typeorm": "^0.2.39",
-        "uuid": "^8.3.2"
-    },
-    "devDependencies": {
-        "@types/bcryptjs": "^2.4.2",
-        "@types/express": "^4.17.13",
-        "@types/jsonwebtoken": "^8.5.6",
-        "@types/multer": "^1.4.7",
-        "@types/swagger-ui-express": "^4.1.3",
-        "@types/uuid": "^8.3.1",
-        "@typescript-eslint/eslint-plugin": "^5.3.0",
-        "@typescript-eslint/parser": "^5.3.0",
-        "eslint": "^7.21.0",
-        "eslint-config-airbnb-base": "^14.2.1",
-        "eslint-config-prettier": "^8.3.0",
-        "eslint-import-resolver-typescript": "^2.5.0",
-        "eslint-plugin-import": "^2.22.1",
-        "eslint-plugin-import-helpers": "^1.1.0",
-        "eslint-plugin-prettier": "^4.0.0",
-        "prettier": "^2.4.1",
-        "ts-node-dev": "^1.1.8",
-        "typescript": "^4.4.4"
-    }
+  "name": "rentalx",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "dev": "ts-node-dev --inspect --respawn --poll --transpile-only --ignore-watch node_modules ./src/server.ts",
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli",
+    "test": "jest"
+  },
+  "repository": "https://github.com/Uallessonivo/rentalx.git",
+  "author": "Uallesson Nunes Ivo <uallessons@gmail.com>",
+  "license": "MIT",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "csv-parse": "^4.16.3",
+    "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.3",
+    "pg": "^8.7.1",
+    "reflect-metadata": "^0.1.13",
+    "swagger-ui-express": "^4.1.6",
+    "tsyringe": "^4.6.0",
+    "typeorm": "^0.2.39",
+    "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.3",
+    "@types/jsonwebtoken": "^8.5.6",
+    "@types/multer": "^1.4.7",
+    "@types/swagger-ui-express": "^4.1.3",
+    "@types/uuid": "^8.3.1",
+    "@typescript-eslint/eslint-plugin": "^5.3.0",
+    "@typescript-eslint/parser": "^5.3.0",
+    "eslint": "^7.21.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import-helpers": "^1.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^27.3.1",
+    "prettier": "^2.4.1",
+    "ts-jest": "^27.0.7",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.4.4"
+  }
 }
