--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
     "scripts": {
         "dev": "ts-node-dev -r tsconfig-paths/register --respawn --inspect --ignore-watch node_modules --transpile-only src/shared/infra/http/server.ts",
         "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli",
-        "test": "jest",
+        "test": "set NODE_ENV=test&& jest",
         "seed:admin": "ts-node src/shared/infra/typeorm/seeds/admin.ts"
     },
     "repository": "https://github.com/Uallessonivo/rentalx.git",
     "author": "Uallesson Nunes Ivo <uallessons@gmail.com>",
     "license": "MIT",
     "dependencies": {
+        "@types/supertest": "^2.0.11",
         "bcryptjs": "^2.4.3",
         "csv-parse": "^4.16.3",
         "dayjs": "^1.10.7",
@@ -21,6 +22,7 @@
         "multer": "^1.4.3",
         "pg": "^8.7.1",
         "reflect-metadata": "^0.1.13",
+        "supertest": "^6.1.6",
         "swagger-ui-express": "^4.1.6",
         "tsyringe": "^4.6.0",
         "typeorm": "^0.2.39",
