--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "dev": "ts-node-dev -r tsconfig-paths/register --respawn --inspect --ignore-watch node_modules --transpile-only src/shared/infra/http/server.ts",
         "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli",
-        "test": "set NODE_ENV=test&& jest",
+        "test": "set NODE_ENV=test&& jest --runInBand --detectOpenHandles",
         "seed:admin": "ts-node src/shared/infra/typeorm/seeds/admin.ts"
     },
     "repository": "https://github.com/Uallessonivo/rentalx.git",
