--- a/package.json
+++ b/package.json
@@ -14,22 +14,26 @@
     "dependencies": {
         "@types/nodemailer": "^6.4.4",
         "@types/supertest": "^2.0.11",
+        "aws-sdk": "^2.1048.0",
         "bcryptjs": "^2.4.3",
+        "class-transformer": "^0.5.1",
         "csv-parse": "^4.16.3",
         "dayjs": "^1.10.7",
+        "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "express-async-errors": "^3.1.1",
         "handlebars": "^4.7.7",
         "jsonwebtoken": "^8.5.1",
+        "mime": "^3.0.0",
         "multer": "^1.4.3",
         "nodemailer": "^6.7.2",
         "pg": "^8.7.1",
         "reflect-metadata": "^0.1.13",
         "supertest": "^6.1.6",
         "swagger-ui-express": "^4.1.6",
+        "ts-jest": "^27.0.7",
         "tsyringe": "^4.6.0",
         "typeorm": "^0.2.39",
-        "ts-jest": "^27.0.7",
         "uuid": "^8.3.2"
     },
     "devDependencies": {
@@ -37,6 +41,7 @@
         "@types/express": "^4.17.13",
         "@types/jest": "^27.0.3",
         "@types/jsonwebtoken": "^8.5.6",
+        "@types/mime": "^2.0.3",
         "@types/multer": "^1.4.7",
         "@types/swagger-ui-express": "^4.1.3",
         "@types/uuid": "^8.3.1",
