--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Setup Nodejs
         uses: actions/setup-node@v2
         with: 
-          node-version: 17.x
+          node-version: 14.x
       
       - name: Install Dependencies
         run: yarn
@@ -25,7 +25,7 @@ jobs:
       - name: Build
         run: yarn build
       
-      - uses: appleboy/scp-action@master
+      - uses: appleboy/scp-action@main
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
