--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,8 +15,8 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Setup Nodejs
-        uses: actions/setup-node@v2
-        with: 
+      - uses: actions/setup-node@v2
+        with:
           node-version: 14.x
       
       - name: Install Dependencies
@@ -24,8 +24,9 @@ jobs:
         
       - name: Build
         run: yarn build
-      
-      - uses: appleboy/scp-action@master
+  
+      - name: copy file via ssh password
+        uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
