--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Setup Nodejs
-      - uses: actions/setup-node@v2
+        uses: actions/setup-node@v2
         with:
           node-version: 14.x
       
@@ -24,8 +24,7 @@ jobs:
         
       - name: Build
         run: yarn build
-  
-      - name: copy file via ssh password
+
       - uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.SSH_HOST }}
