--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,11 +25,12 @@ jobs:
       - name: Build
         run: yarn build
 
-      - uses: appleboy/ssh-action@master
+      - name: copy file via ssh password
+        uses: appleboy/scp-action@master
         with:
-          host: ${{ secrets.SSH_HOST }}
-          port: ${{ secrets.SSH_PORT }}
-          username: ${{ secrets.SSH_USER }}
-          key: ${{ secrets.SSH_KEY }}
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USER }}
+          port: ${{ secrets.PORT }}
+          key: ${{ secrets.KEY }}
           source: "., !node_modules"
           target: "test"
