adicionando o redis e sentry

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,12 @@ AWS_BUCKET_URL=
 MAIL_PROVIDER=
 APP_API_URL=
 DISK=
+
+
+# # REDIS
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+
+# # SENTRY
+SENTRY_DSN=
