--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,11 +13,19 @@ services:
             - POSTGRES_DB=rentalx
         volumes:
             - pgdata:/data/postgres
+
+    redis:
+        image: redis:alpine
+        ports:
+          - 6379:6379
+
     app:
         build: .
         container_name: rentalx
+        restart: always
         ports:
             - 3333:3333
+            - 9229:9229
         volumes:
             - .:/usr/app
         links:
